--- a/crowdSimulationLib/pom.xml
+++ b/crowdSimulationLib/pom.xml
@@ -111,9 +111,15 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
 		</dependency>
+        <dependency>
+            <groupId>de.fhg.ivi.crowdsimulation</groupId>
+            <artifactId>crowdsimui1</artifactId>
+            <version>2.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
-		<!-- <dependency> <groupId>javax.media</groupId> <artifactId>jai_core</artifactId> 
-			<version>1.1.3</version> </dependency> -->
+        <!-- <dependency> <groupId>javax.media</groupId> <artifactId>jai_core</artifactId>
+            <version>1.1.3</version> </dependency> -->
 	</dependencies>
 
 	<build>
